<resources>
    <string name="app_name">Sportland</string>
    <string name="name">Имя</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="welcome_to_sportland">ДОБРО ПОЖАЛОВАТЬ В SPORTLAND</string>
    <string name="please_anketa">ПОЖАЛУЙСТА, ЗАПОЛНИТЕ АНКЕТУ</string>
    <string name="choose_city">Выберите город</string>
    <string name="data">Ваша дата рождения</string>
    <string name="minimum_three">Выберете минимум 3 вида спорта:</string>
    <string name="basketball">Баскетбол</string>
    <string name="football">Футбол</string>
    <string name="ski">Лыжи</string>
    <string name="tennis">Теннис</string>
    <string name="hokkei">Хоккей</string>
    <string name="bicycle_sport">Велоспорт</string>
    <string name="volleyball">Воллейбол</string>
    <string name="running">Бег</string>
    <string name="about_you">О себе</string>
    <string name="next">Продожить</string>
    <string name="main">Главная</string>
    <string name="next2">Продолжить</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Уже зарегестрированы?</string>
    <string name="view_again">МЫ РАДЫ ВИДЕТЬ ВАС СНОВА</string>
    <string name="name2">Имя</string>
    <string name="first_once">Вы у нас первый раз?</string>
    <string name="registration2">Зарегестрироваться</string>
    <string name="next3">Продолжить</string>
    <string name="main2">Главная</string>
    <string name="chat">Чаты</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="create_game">СОЗДАЙТЕ СВОЮ ИГРУ!</string>
    <string name="location_game">Место проведения игры</string>
    <string name="time_game">Время проведения игры</string>
    <string name="sport_type">Выберите вид спорта</string>
    <string name="number_players">Количество игроков</string>
    <string name="create_game2">Создать игру!</string>
    <string name="profile2">Профиль</string>
    <string name="time">Время: %s</string>
    <string name="city">%s, </string>
    <string name="number">%d/%d</string>
    <string name="location">%s</string>
</resources>