<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_sign_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/view_again"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/green3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name2"
        android:textColorHint="@color/green3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="32"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:textColorHint="@color/green3"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/green3"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="32"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_once"
        android:textAlignment="center"
        android:textColor="@color/green3"/>

    <Button
        android:id="@+id/buttonToRegisterScreen"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:text="@string/registration2"
        android:textColor="#0099FF" />

    <Button
        android:id="@+id/buttonToFirstProfile"
        style="@style/button_style"
        android:layout_marginStart="55dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="64dp"
        android:text="@string/next3"
        android:textColor="@color/green2" />

</LinearLayout>

